--- a/src/bill.html
+++ b/src/bill.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div
+    <!-- <div
       style="
         display: flex;
         align-items: center;
@@ -17,8 +17,8 @@
         line-height: 1.5;
         font-size: 13pt;
       "
-    >
-      <div style="width: 300pt; background-color: aqua; min-height: 100vh; padding: 50px 90px">
+    > -->
+      <div style="width: 800px; background-color: aqua; min-height: 100vh; padding: 50px 90px">
         <div style="font-weight: 700; text-align: center; font-size: 20px">
           CỬA HÀNG ĐIỆN THOẠI VÀ PHỤ KIỆN TÂN MOBILE
         </div>
@@ -60,6 +60,6 @@
         <div>Ngày: 20-04-2023</div>
         <div>NV lập hóa đơn: Vũ Viết Tân</div>
       </div>
-    </div>
+    <!-- </div> -->
   </body>
 </html>
